<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cat_pixel"
            android:id="@+id/errorImageView"
            android:contentDescription="@string/error_image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorTitleTextView"
            android:layout_marginBottom="20dp"/>

    <TextView
            tools:text="@string/connection_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorTitleTextView"
            android:textColor="#5B5855"
            android:fontFamily="@font/proximanova_semibold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            tools:text="@string/connection_error_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/errorDescriptionTextView"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/errorTitleTextView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textColor="#7D7A77"
            android:textSize="16sp"/>

    <Button android:id="@+id/tryAgainButton"
            android:text="@string/try_again_label"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:background="@drawable/bg_corners"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/proximanova_semibold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorDescriptionTextView"
            android:layout_marginTop="30dp"/>

    <ProgressBar
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>